<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView01"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">


            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="25dp"
                android:text="@string/formTitle"
                android:textSize="10pt"
                app:fontFamily="casual"></TextView>

            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:entries="@array/feedbacktypelist"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="7dp"
                android:prompt="@string/sizePrompt"></Spinner>

            <Spinner
                android:id="@+id/hairSpinner"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginBottom="7dp"
                android:entries="@array/hairSelectionList"
                android:prompt="@string/livingSpaceSelection">
            </Spinner>

            <Spinner
                android:id="@+id/priceSpinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:entries="@array/priceSelectionList"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="7dp"
                android:prompt="@string/priceSelection"></Spinner>

            <Spinner
                android:id="@+id/houseSpinner"
                android:layout_width="fill_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="7dp"
                android:entries="@array/houseSelectionList"
                android:prompt="@string/hairSelection"></Spinner>

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="7dp"
                android:entries="@array/timeSelectionList"
                android:prompt="@string/timeSelection"></Spinner>

            <CheckBox
                android:id="@+id/hypoCheck"
                android:layout_width="fill_parent"
                android:layout_height="79dp"
                android:layout_marginBottom="7dp"
                android:text="@string/allergiesResponse"></CheckBox>

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="61dp"
                android:text="@string/submitButton"></Button>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>